sass/master.scss
@import "constants";

#dropdown, #seeSymphony {
  display: none;
}

html, body {
  margin: 0;
  padding: 0;
  background-color: $black;
}

ul {
  list-style-type: none;
}

nav, footer {
  background-color: $black;
  padding: 0 5%;
  ul {
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

  li {
    float: right;

    a {
      letter-spacing: 3px;
      display: block;
      color: $white;
      text-align: center;
      text-decoration: none;
      &:hover {
        color: $grey;
      }
    }

    &:hover {
      background-color: #111;
    }
    &:first-child {
      float: left;
      a {
        padding-left: 0;
        margin-left: 0;
      }
    }
    &#aboutNavLink {
      a {
        padding-right: 0;
        margin-right: 0;
      }
    }
  }
}

nav li a {
  padding: 17px 20px 10px 20px;
  margin: 0 30px;
}

footer li:first-child a {
  padding-left: 0;
}

#logo {
  padding: 0;
  a {
    padding-top: 10px;
  }
  img {
    width: 120px;
  }
}

img {
  display: block;
}

p {
  margin: 0;
  padding: 0;
}

div.main {
  margin: 0;
  padding: 0;
}


div.indent {
  padding: 50px 5%;
  background-color: $white;
  &.about {

    min-height: 800px;

    ul {
      list-style-type: disc;
      &#tab-buttons {
        list-style-type: disc;
        width: 100%;
        margin: 0;
        margin-bottom: 40px;
        padding: 0;
        li {
          margin: 0;
          display: inline-block;
          background-color: $grey;
          padding: 10px 0;
          width: 24%;
          text-align: center;

          &.tab-buttons-active {
            background-color: $nepal;
          }
          &:hover {
            cursor: pointer;
          }
        }
      }
    }
  }
}

div.black {
  //padding: 50px 15%;
  background-color: $black;
  color: white;
  &.indent {
    h2 {
      text-align: left;
      margin-left: 0;
      color: $nepal;
    }
  }
}

.full-size {
  width: 100%;
}

.center {
  text-align: center;
}

footer {
  width: auto;
  padding: 0 5%;
  background-color: $black;
  border-top: 6px solid $everglade;
  li {
    &:hover {
      background-color: $black;
    }
    a {
      color: $nepal;
      padding: 25px 8px;
    }
  }
}

.tab {
  display: none;
  &.active {
    display: initial;
  }
}

.two-thirds {
  display: inline-block;
  width: 66%;
}

.controls {
  display: inline-block;
  float: right;
  width: 33%;
  position: relative;
  top: -75px;
  li {
    margin-top: 10px;
    text-align: left;
  }

  i.fas {
    font-size: 20px;
    margin-right: 5px;
    color: $everglade;

    &.fa-map-marker-alt {
      margin-left: 2.5px;
      margin-right: 7px;
    }
  }
}

.current {
  color: $nepal;
}

// remove button styling
button {
  background: none;
  color: inherit;
  border: none;

  &:hover {
    cursor: pointer;
  }
}

.watch {
  background-color: $nepal;
  width: 200px;
  margin-left: 10%;
  margin-top: 150px;
  padding: 10px 0;
  border-radius: 5px;
  i.fas {
    color: $white;
    margin-right: 0;
    margin-left: 5px;
    position: relative;
    top: 3px;
  }

  &:hover {
    background-color: darken($nepal, 25%);
  }
}


svg {
  width: 20px;
  height: 20px;
  margin-right: 5px;
  .everglade {
    stroke: $everglade;
    fill: $everglade;
    &.cls-1 {
      fill: none;
    }
  }
  .nepal {
    stroke: $nepal;
  }
}

body {
  position: relative;
}

.overlay {
  z-index: 100;
  position: fixed;
  top: 0; bottom: 0; left: 0; right: 0;
  background: rgba(0, 0, 0, 0.7);
  transition: opacity 500ms;
  visibility: hidden;
  opacity: 0;
  padding: 60px 5%;

  &.up {
    visibility: visible;
    opacity: 1;
  }

  button {
    color: white;
    float: right;
  }
  .popup {
    margin-top: 100px;
  }
}

body {
  overflow-x: hidden;
  position: relative;
  top: 0;
  left: 0;
  transition: left 1s;

  &.slid {
    left: -25%;
  }
}

div#guidenav {
  position: absolute;
  top: 0;
  left: 100%;
  width: 20%;
  padding: 5%;
  h1 {
    color: white;
  }
  .thumb {
    width: 90%;
    margin: 5px 0;
    border: 1px solid $white;
  }
}

div#symphony-copy {

  /*
  button {
    font-size: 18px;
    text-align: right;
    &:hover {
      color: $grey;
    }
  }
  */
  .controls {
    position: relative;
    top: 0;
    margin-left: 3%;
  }

  #enterSymphony {
    text-align: center;
    margin-top: 0;
  }

  h2 {
    margin-bottom: 40px;
  }
  p {
    cursor: pointer;
    color: black;
  }
}

div#symphony-landing {
  img {
    height: 600px;
  }

  position: relative;
  top: 0;
  left: 0;
  transition: left 1s;
  min-height: 900px;

  &.slid {
    left: -100%;
  }

  .indent {
    height: 250px;
  }
}

div#symphony-player {
  background-color: $white;
  position: absolute;
  top: 0;
  left: 100%;
  transition: left 1s;
  margin-top: 60px;
  width: 100%;
  height: 840px;

  &.slid {
    left: 0%;
    width: 90%;
  }

  .watch {
    display: block;
    margin-top: 350px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 50px;
  }

  a {
    margin-left: 5%;
    text-decoration: none;
    color: black;
    position: relative;
    top: 100px;
  }

  #Content .Slider.x {
    width: 90%;
    margin-left: 5%;
  }

  .animalIcon {
    width: 150px;
    position: relative;
    left: -25px;
    cursor: -webkit-grab;
  }
  .sliderIcon {
    width: 148px;
    position: relative;
    left: -29px;
    top: -29px;
    cursor: -webkit-grab;
  }

  div#iconContainer {
    position: absolute;
    right: 10%;
    bottom: 100px;

    $thumb_width: 100px;
    $thumb_height: 125px;

    div#soundIcons {
      display: grid;
      grid-template-columns: $thumb_width $thumb_width $thumb_width $thumb_width $thumb_width;
      grid-template-rows: $thumb_height $thumb_height;
      width: 500px;

      .caption {
        font-size: 12px;
        text-align: center;
        height: 30px;
      }
    }
  }
}

@media (min-width: 1200px) {
  //$background_large_color: darken($everglade, 10%);
  $background_large_color: white;

  .main {
    background-color: $background_large_color;
  }

  div.main {
    padding: 0 10%;
  }
  nav {
    padding: 0 10%;
    margin-bottom: 5px;
    li#aboutNavLink {
      margin-right: 15px;
    }
  }
  footer {
    padding: 0 10%;
    //border-top: 6px solid $background_large_color;
    border-top: 6px solid $everglade;
  }
  div#guidebody {
    width: 70%;
    .nav-toggler {
      display: none;
    }
    button {
      text-align: left;
    }
  }

  div#guidenav {
    margin-top: 30px;
    left: 70%;
    padding: 3% 1%;
    width: 20%;
    overflow-y: scroll;
    h1 {
      margin-top: 0;
      color: black;
    }

    button {
      width: 49%;
      display: inline-block;
      margin: 5px 0;
      padding: 0;
      img.thumb {
        margin: 0;
        border: 1px solid $black;
      }
    }
  }
  div#symphony-landing.slid {
    left: -150%;
  }
  div#symphony-player div#iconContainer {
    position: static;
    width: 500px;
    margin: 0 auto;
  }
}

@media (max-width: 767px) {
  nav li {

    border-top: 1px solid $grey;

    &#dropdown {
      display: initial;
      position: absolute;
      top: 15px;
      right: 20px;
      color: $nepal;
      border-top: none;
      font-size: 20px;
    }

    float: none;
    display: none;

    &:first-child {
      float: none;
      display: initial;
    }

    &.hamburged {
      display: initial;
    }
    a {
      margin: 0;
    }
  }
  //turn off the email
  footer li:first-child {
    max-width: 15px;
    white-space: nowrap;
    overflow: hidden;
  }
  .two-thirds {
    width: 100%;
  }
  .controls {
    width: 100%;
    position: static;
    float: none;
    button {
      margin: 30px auto 0 auto;
      display: block;
    }
    ul {
      padding: 0;
      text-align: left;
    }
  }
  .guide-controls button {
    margin: 0;
    display: inline-block;
  }
  .indent.black h2 {
    -webkit-margin-before: 0;
  }
  div#guidenav {
    width: 40%;
  }
  body.slid {
    left: -50%;
  }
  div.indent.about {
    min-height: 500px;
    ul#tab-buttons {
      margin-bottom: 10px;
      li {
        height: 18px;
        display: block;
        width: 100%;
        margin-top: 5px;
      }
    }
  }
  div#symphony-landing {
    &.slid {
      left: 0;
    }

    min-height: auto;
    img {
      height: initial;
      width: 100%;
    }
    div#symphony-copy button {
      font-size: 12px;
      text-align: left;
    }
    #enterSymphony {
      display: none;
    }
    #seeSymphony {
      display: initial;
      margin-top: 20px;
    }
  }
  div#symphony-player {
    display: none;
  }
}

@media (max-width: 900px) and (min-width: 768px) {
  nav, footer {
    li a {
      margin: 0 15px;
    }
  }
}

